--- a/Dockerfile-sidekiq
+++ b/Dockerfile-sidekiq
@@ -8,16 +8,12 @@ ADD Gemfile /app/Gemfile
 ADD Gemfile.lock /app/Gemfile.lock
 RUN bundle install
 
-# RUN rails db:migrate
-# RUN rails db:seed
-# ADD . /app
-# Add a script to be executed every time the container starts.
-COPY entrypoint.sh /usr/bin/
-RUN chmod +x /usr/bin/entrypoint.sh
-ENTRYPOINT ["entrypoint.sh"]
+ADD . /app
 
+# RUN 'bundle exec sidekiq -r ./update_chats_count_worker.rb'
+# RUN 'bundle exec sidekiq -r ./update_message_count_worker.rb'
 # CMD ["bundle", "exec", "sidekiq", "-C", "./config/sidekiq.yml"]
 # CMD ["bundle", "exec", "sidekiq", "-r", "./update_chats_count_worker.rb"]
 # CMD ["bundle", "exec", "sidekiq", "-r", "./update_message_count_worker.rb"]
 # Configure the main process to run when running the image
-EXPOSE 3000
+# EXPOSE 3000
