--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,86 +1,130 @@
 version: '3.1'
 services:
+    #Container for MySQl
+    db: 
+        image: mysql
+        container_name: mysql
+        command: --default-authentication-plugin=mysql_native_password
+        restart: always
+        cap_add:
+            - SYS_NICE  # CAP_SYS_NICE
+        volumes:
+            - ./volumes/mysql_db:/var/lib/mysql
+        environment:
+            MYSQL_DATABASE: chat_system_development
+            MYSQL_ROOT_PASSWORD: admin
+            MYSQL_USERNAME: root
+            MYSQL_PASSWORD: admin
+        ports:
+            - "3307:3306"
+        expose:
+            - '3307'
+
     #Container for Elasticsearch
     elasticsearch:
-        image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
+        container_name: elasticsearch
+        restart: always
+        depends_on:
+            - db
+        hostname: elasticsearch
         environment:
             - discovery.type=single-node
             - cluster.name=docker-cluster
             - bootstrap.memory_lock=true
             - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+            # - "transport.host=127.0.0.1"
+            # - "transport.tcp.port=9200"
+            # - "http.host=0.0.0.0"
+            # - "http.port=9200"     
         ulimits:
             memlock:
                 soft: -1
                 hard: -1
+            nofile:
+                soft: 65536
+                hard: 65536
         ports:
-            - 9200:9200
+            - 9300:9200
+        expose:
+            - '9300'
         volumes:
-            - esdata:/usr/share/elasticsearch/data
+            - ./volumes/es:/usr/share/elasticsearch/data
+        # networks:
+        #     - elastic
 
-    #Container for Kibana
-    # kibana:
-    #     image: docker.elastic.co/kibana/kibana:7.10.1
-    #     ports:
-    #         - 5602:5601
-    #     depends_on:
-    #         - elasticsearch
-
-    #Container for MySQl
-    db: 
-        image: mysql:5.7
-        restart: always
-        volumes:
-            - db_data:/var/lib/mysql
-        environment:
-            MYSQL_ROOT_PASSWORD: root
-            MYSQL_DATABASE: chat_system_development
-        # ports:
-        #     - "3306:3306"
-
-    #Container for Rails
-    app: 
-        build: .
-        entrypoint: [bin/entry]
-        command: bundle exec rails s -p 3000 -b '0.0.0.0'
-        volumes: 
-            - ".:/app"
-        ports: 
-            - "3001:3000"
-        depends_on:
-            - db
-            - sidekiq
-            - elasticsearch
-        links:
-            - db
-        environment:
-            RAILS_ENV: "development"
-            REDIS_URL: "redis://redis:6379/12"
-            DB_NAME: chat_system_development
-            DB_USER: root
-            DB_PASSWORD: admin
-            DB_HOST: db
-
-    #Container for Redis
+    # #Container for Redis
     redis:
         image: redis
-        volumes:
-            - .tmp/db:/var/lib/redis/data
+        container_name: redis
+        restart: always
         depends_on:
             - db
+        command: redis-server --appendonly yes
+        volumes:
+            - "./volumes/redis:/data"
 
-    #Container for Sidekiq
+    # #Container for Sidekiq
     sidekiq:
-        build: .
+        build: 
+            context: .
+            dockerfile: Dockerfile-sidekiq
+        container_name: sidekiq
+        restart: always
+        depends_on:
+            - db
+            - redis
         command: 'bundle exec sidekiq -C ./config/sidekiq.yml'
         volumes:
             - ".:/app"
         environment:
+            ELASTICSEARCH_URL: "http://elasticsearch:9200/"
+            ES_HOST: es
             RAILS_ENV: "development"
-            REDIS_URL: "redis://redis:6379/12"
+            REDIS_URL: "redis://redis:6379/0"
+            DB_NAME: chat_system_development
+            DB_USER: root
+            DB_PASSWORD: admin
+            DB_PORT: 3306
+            DB_HOST: db
+            RAILS_MAX_THREADS: 5
+
+    #Container for Rails
+    app: 
+        build:
+            context: .
+            dockerfile: Dockerfile
+        container_name: chat_system
+        restart: always
+        command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+        ports: 
+            - "3001:3000"
+        expose:
+            - '3001'
+        volumes:
+            - ".:/app"
         depends_on:
             - db
             - redis
-    
-volumes:
-    db_data: 
-    esdata: 
+            # - sidekiq
+            - elasticsearch
+        environment:
+            ELASTICSEARCH_URL: "http://elasticsearch:9200/"
+            ES_HOST: es
+            RAILS_ENV: "development"
+            REDIS_URL: "redis://redis:6379/0"
+            DB_NAME: chat_system_development
+            DB_USER: root
+            DB_PASSWORD: admin
+            DB_PORT: 3306
+            DB_HOST: db
+            RAILS_MAX_THREADS: 5
+
+# volumes:
+#     mysql_db: 
+#     redis:
+#     es: 
+
+# networks:
+#   elastic:
+#     driver: bridge
