--- a/test/fixtures/system_applications.yml
+++ b/test/fixtures/system_applications.yml
@@ -3,9 +3,9 @@
 one:
   name: MyString
   token: MyString
-  chats_count: MyString
+  chats_count: 1
 
 two:
   name: MyString
   token: MyString
-  chats_count: MyString
+  chats_count: 1
