--- a/Dockerfile-sidekiq
+++ b/Dockerfile-sidekiq
@@ -1,19 +1,13 @@
 FROM ruby:2.7.2
 
-RUN apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs
+RUN apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs netcat
 RUN gem install bundler:2.2.21
 RUN mkdir /app
 WORKDIR /app
 ADD Gemfile /app/Gemfile
 ADD Gemfile.lock /app/Gemfile.lock
 RUN bundle install
-
 ADD . /app
 
-# RUN 'bundle exec sidekiq -r ./update_chats_count_worker.rb'
-# RUN 'bundle exec sidekiq -r ./update_message_count_worker.rb'
-# CMD ["bundle", "exec", "sidekiq", "-C", "./config/sidekiq.yml"]
-# CMD ["bundle", "exec", "sidekiq", "-r", "./update_chats_count_worker.rb"]
-# CMD ["bundle", "exec", "sidekiq", "-r", "./update_message_count_worker.rb"]
-# Configure the main process to run when running the image
-# EXPOSE 3000
+# RUN bundle exec sidekiq -r /app/workers/update_messages_count_worker.rb
+# RUN bundle exec sidekiq -r /app/workers/update_chats_count_worker.rb
