--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,10 @@ services:
             MYSQL_ROOT_PASSWORD: admin
             MYSQL_USERNAME: root
             MYSQL_PASSWORD: admin
+        # healthcheck:
+        #     test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+        #     timeout: 20s
+        #     retries: 10
         ports:
             - "3307:3306"
         expose:
@@ -25,18 +29,12 @@ services:
         image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
         container_name: elasticsearch
         restart: always
-        depends_on:
-            - db
         hostname: elasticsearch
         environment:
             - discovery.type=single-node
             - cluster.name=docker-cluster
             - bootstrap.memory_lock=true
-            - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-            # - "transport.host=127.0.0.1"
-            # - "transport.tcp.port=9200"
-            # - "http.host=0.0.0.0"
-            # - "http.port=9200"     
+            - "ES_JAVA_OPTS=-Xms512m -Xmx512m"    
         ulimits:
             memlock:
                 soft: -1
@@ -50,21 +48,17 @@ services:
             - '9300'
         volumes:
             - ./volumes/es:/usr/share/elasticsearch/data
-        # networks:
-        #     - elastic
 
     # #Container for Redis
     redis:
         image: redis
         container_name: redis
         restart: always
-        depends_on:
-            - db
         command: redis-server --appendonly yes
         volumes:
             - "./volumes/redis:/data"
 
-    # #Container for Sidekiq
+    #Container for Sidekiq
     sidekiq:
         build: 
             context: .
@@ -79,6 +73,8 @@ services:
             - ".:/app"
         environment:
             ELASTICSEARCH_URL: "http://elasticsearch:9200/"
+            ELASTICSEARCH_HOST: "elasticsearch"
+            ELASTICSEARCH_PORT: 9200
             ES_HOST: es
             RAILS_ENV: "development"
             REDIS_URL: "redis://redis:6379/0"
@@ -106,10 +102,12 @@ services:
         depends_on:
             - db
             - redis
-            # - sidekiq
+            - sidekiq
             - elasticsearch
         environment:
             ELASTICSEARCH_URL: "http://elasticsearch:9200/"
+            ELASTICSEARCH_HOST: "elasticsearch"
+            ELASTICSEARCH_PORT: 9200
             ES_HOST: es
             RAILS_ENV: "development"
             REDIS_URL: "redis://redis:6379/0"
@@ -119,12 +117,3 @@ services:
             DB_PORT: 3306
             DB_HOST: db
             RAILS_MAX_THREADS: 5
-
-# volumes:
-#     mysql_db: 
-#     redis:
-#     es: 
-
-# networks:
-#   elastic:
-#     driver: bridge
